--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_choose_objective_type">Filtrare obiective</string>
     <string name="pref_header_general">Tipuri de obiective</string>
+    <string name="title_activity_choose_objective_types">Tipuri de obiective</string>
+    <string name="title_activity_objectives">Objectives</string>
 
 </resources>
