change navmenu layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">JRS</string>
+    <string name="app_name">JRS România</string>
     <string name="title_activity_maps">Hartă</string>
     <string name="search">Search</string>
     <string name="title_activity_main">JRS România</string>
